--- a/starter/app/src/main/res/navigation/main_navigation.xml
+++ b/starter/app/src/main/res/navigation/main_navigation.xml
@@ -17,7 +17,7 @@
     <fragment
         android:id="@+id/welcomeFragment"
         android:name="com.udacity.shoestore.view.welcome.WelcomeFragment"
-        android:label="WelcomeFragment"
+        android:label="Welcome to Shoe Store"
         tools:layout="@layout/fragment_welcome">
         <action
             android:id="@+id/action_welcomeFragment_to_instructionFragment"
@@ -26,7 +26,7 @@
     <fragment
         android:id="@+id/instructionFragment"
         android:name="com.udacity.shoestore.view.instruction.InstructionFragment"
-        android:label="InstructionFragment"
+        android:label="Instructions"
         tools:layout="@layout/fragment_instruction">
         <action
             android:id="@+id/action_instructionFragment_to_shoeListFragment"
@@ -35,6 +35,6 @@
     <fragment
         android:id="@+id/shoeListFragment"
         android:name="com.udacity.shoestore.view.showlist.ShoeListFragment"
-        android:label="ShoeListFragment"
+        android:label="Shoes List"
         tools:layout="@layout/fragment_shoe_list" />
 </navigation>
