--- a/starter/app/src/main/res/navigation/main_navigation.xml
+++ b/starter/app/src/main/res/navigation/main_navigation.xml
@@ -34,7 +34,7 @@
     </fragment>
     <fragment
         android:id="@+id/shoeListFragment"
-        android:name="com.udacity.shoestore.view.showlist.ShoeListFragment"
+        android:name="com.udacity.shoestore.view.shoelist.ShoeListFragment"
         android:label="Shoes List"
         tools:layout="@layout/fragment_shoe_list" />
 </navigation>
