--- a/starter/app/src/main/res/navigation/main_navigation.xml
+++ b/starter/app/src/main/res/navigation/main_navigation.xml
@@ -36,5 +36,19 @@
         android:id="@+id/shoeListFragment"
         android:name="com.udacity.shoestore.view.shoelist.ShoeListFragment"
         android:label="Shoes List"
-        tools:layout="@layout/fragment_shoe_list" />
+        tools:layout="@layout/fragment_shoe_list">
+
+        <action
+            android:id="@+id/action_shoeListFragment_to_shoeDetailsFragment"
+            app:destination="@id/shoeDetailsFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/shoeDetailsFragment"
+        android:name="com.udacity.shoestore.view.shoedetails.ShoeDetailsFragment"
+        android:label="ShoeDetailsFragment"
+        tools:layout="@layout/fragment_shoe_details" >
+        <action
+            android:id="@+id/action_shoeDetailsFragment_to_shoeListFragment"
+            app:destination="@id/shoeListFragment" />
+    </fragment>
 </navigation>
