--- a/starter/app/src/main/res/layout/fragment_shoe_details.xml
+++ b/starter/app/src/main/res/layout/fragment_shoe_details.xml
@@ -22,7 +22,7 @@
 
         <TextView
             android:id="@+id/tv_shoe_details_label"
-            style="@style/TextAppearance.AppCompat.Title"
+            style="@style/TextAppearance.MaterialComponents.Headline5"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_32"
