--- a/starter/app/src/main/res/layout/fragment_shoe_details.xml
+++ b/starter/app/src/main/res/layout/fragment_shoe_details.xml
@@ -2,6 +2,13 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <data>
+
+        <variable
+            name="mainViewModel"
+            type="com.udacity.shoestore.viewmodel.MainViewModel" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -53,7 +60,8 @@
                 android:inputType="text"
                 android:maxLines="1"
                 android:selectAllOnFocus="true"
-                android:singleLine="true" />
+                android:singleLine="true"
+                android:text="@={mainViewModel.shoeName}" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -77,7 +85,8 @@
                 android:inputType="text"
                 android:maxLines="1"
                 android:selectAllOnFocus="true"
-                android:singleLine="true" />
+                android:singleLine="true"
+                android:text="@={mainViewModel.shoeCompany}" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -101,7 +110,8 @@
                 android:inputType="number"
                 android:maxLines="1"
                 android:selectAllOnFocus="true"
-                android:singleLine="true" />
+                android:singleLine="true"
+                android:text="@={mainViewModel.shoeSize}" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -123,7 +133,8 @@
                 android:layout_height="wrap_content"
                 android:imeOptions="actionDone"
                 android:inputType="text"
-                android:selectAllOnFocus="true" />
+                android:selectAllOnFocus="true"
+                android:text="@={mainViewModel.shoeDescription}" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.button.MaterialButton
@@ -131,6 +142,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/margin_8"
+            android:onClick="@{()-> mainViewModel.addShoe()}"
             android:text="@string/shoe_details_save"
             android:textAllCaps="false"
             app:layout_constraintBottom_toTopOf="@id/mbt_shoe_details_cancel"
@@ -142,6 +154,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/margin_32"
+            android:onClick="@{()-> mainViewModel.onCancel()}"
             android:text="@string/shoe_details_cancel"
             android:textAllCaps="false"
             app:layout_constraintBottom_toBottomOf="parent"
